--- a/style.css
+++ b/style.css
@@ -152,7 +152,9 @@ justify-content: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+  width: 80%;
+  position: relative;
+  margin-left: 10%;
   }
   
   .siliconCase,.magsafecharger,.leatherCase{
@@ -161,10 +163,13 @@ justify-content: center;
     margin: 5px;
   }
   .siliconCase img,.magsafecharger img ,.leatherCase img{
-    height: 300px;
-    width: 300px;
-  padding: 10px;
-  margin: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 250px;
+    width: 250px;
+  padding: 40px;
+ 
   margin-left: 20px;
   margin-right: 20px;
   }
@@ -342,6 +347,7 @@ justify-content: center;
     border-radius: 1rem;
     margin: 5px;
   }
+ 
   .airtag img ,.airtag4pack img ,.airtagleather img {
     height: 300px;
     width: 300px;
@@ -350,17 +356,28 @@ justify-content: center;
   margin-left: 20px;
   margin-right: 20px;
   }
-  
+  .soundessentials{
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin-left: 10%;
+    position: relative;
+}
   .airpodspro,.homepod,.bitsfitpro{
     background-color: #F2F2F2;
     border-radius: 1rem;
     margin: 5px;
   }
   .airpodspro img,.homepod img,.bitsfitpro img {
-    height: 300px;
-    width: 300px;
-  padding: 15px;
-  margin: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 250px;
+    width: 250px;
+  padding: 70px;
+  margin: 20px;
   margin-left: 20px;
   margin-right: 20px;
   }
