--- a/style.css
+++ b/style.css
@@ -157,12 +157,12 @@ justify-content: center;
   margin-left: 10%;
   }
   
-  .siliconCase,.magsafecharger,.leatherCase{
+  .siliconCase{
     background-color: #F2F2F2;
     border-radius: 1rem;
     margin: 5px;
   }
-  .siliconCase img,.magsafecharger img ,.leatherCase img{
+  .siliconCase img{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -173,9 +173,7 @@ justify-content: center;
   margin-left: 20px;
   margin-right: 20px;
   }
-  .leatherCase .new ,.leatherCase .description,.leatherCase .price,.leatherCase .circles1{
-  text-align: center;
-  }
+ 
   .description{
     text-align: center;
   }
