--- a/style.css
+++ b/style.css
@@ -54,13 +54,27 @@
     font-size: 20px;
     float: left 5px;
   }
-  
-  .searchbar{
+  .background{
     display: flex;
-    justify-content: center;
-   text-align: center;
-   align-items: center;
-  
+    align-items: center;
+    background-color:#F2F2F2 ;
+  }
+  .info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+margin-left: 25%;   
+color: #1D1D1F; 
+margin-top: 30px;
+  }
+.shop1{
+  margin: 20px;
+  list-style: none;
+  font-size: 17px;
+}
+
+
+  .searchbar{
    margin-bottom: 20px;
   }
   .search{
@@ -84,60 +98,6 @@
   input[type="text"]::placeholder {
                  
     text-align: center;
-  }
-  
-  .browse1{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-  margin-top: 40px;
-    margin-bottom: 20px;
-    border-bottom:   1px solid rgb(231, 225, 225);
-    
-  }
-  .category li ,.product li {
-    list-style: none;
-    text-decoration: none;
-  }
-  
-  .category li a{
-    text-decoration: none;
-    list-style: none;
-    text-align: center;
-    font-size: 20px;
-    padding: 20px;
-    margin: 30px;
-    list-style: none;
-  color: #6E6E73;
-  }
-  .product li a{
-    text-decoration: none;
-    list-style: none;
-    text-align: center;
-    font-size: 20px;
-    padding: 20px;
-    margin: 30px;
-    color: black;
-  }
-  .productpics{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    border-bottom: 1px solid rgb(231, 225, 225);
-  }
-  
-  .images img{
-    padding: 30px;
-    margin: 15px;
-    border-radius: 50% ;
-    border-style:solid;
-    border-color: rgb(242, 236, 236);
-    background-color: white;
-    height: 150px;
-    width: 150px;
-  
   }
   
   #ftiphonesTitle{
@@ -177,6 +137,7 @@
   .description{
     text-align: center;
     margin-bottom: 10px;
+    font-size: 14px;
   }
   .description p{
     margin-bottom: 0;
@@ -286,7 +247,7 @@
     list-style: none;
     font-size: 17px;
   }
-  .shop li a ,.learn li a{
+  .shop li a ,.learn li a,.shop1 li a{
     text-decoration: none;
     color: #0066CC;
   }
