--- a/style.css
+++ b/style.css
@@ -2,11 +2,30 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   @font-face {
     font-family: "San Francisco";
     font-weight: 400;
     src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
+  }
+
+
+  .mediaq{
+    display: none;
+  }
+
+  .mediaq li {
+    list-style: none;
+  }
+  .mediaq li a {
+    text-decoration: none;
+    color: #d6d6d6;
+
+  }
+  .applem,.toggle-button,.shopm{
+    margin: 10px;
   }
   .navbar{
     display: flex;
@@ -39,38 +58,37 @@
     font-size: 15px;
 
   }
-  .navbar li a:hover{
+  .navbar li a:hover,.mediaq li a:hover,.toggle-button .bar:hover{
 color: white;
   }
   .navlii li a{
 margin-left: 100px;
   }
   .toggle-button{
-    position: fixed;
     top: .75rem;
-    right: 1rem;
+    left: 1rem;
     display: none;
     flex-direction: column;
     justify-content: space-between;
 width: 20px;
-height: 12px;
+height: 10px;
   }
   .toggle-button .bar{
     height: 3px;
     width: 100%;
     border-radius: 10px;
     /* color: white; */
-    background-color: white;
+    background-color: #d6d6d6;
   }
   .navbar2{
+    position: sticky; top: 0;
     display: flex;
     justify-content:space-around;
     align-items: center;
     background-color: white;
     padding: .9rem;
     border-bottom: 1px solid grey;
-    position: sticky; top: 0;
-    z-index: 3;
+    z-index: 10;
   }
   .acce li,.browse li{
     list-style: none;
@@ -82,6 +100,55 @@ height: 12px;
   .acce li a{
     font-size: 20px;
     float: left 5px;
+  }
+  
+  .introCon {
+    display: flex;
+    background-color: #F2F2F2;
+  }
+  .container1 {
+    /* margin-bottom: 30px; */
+    
+    margin-left: 20px;
+    width: 100%;
+    height: 600px;
+    background-image: url('https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/magsafe-202209?wid=2880&hei=960&fmt=jpeg&qlt=90&.v=1660687633632');
+    background-size: 170%;
+    
+  }
+
+  .paras  {
+    /* background-color: pink; */
+    width: 300px;
+    z-index: 4;
+    
+    right: 300;
+    /* flex: 1 */
+
+  }
+  
+  .mixheading {
+    font-size: 60px;
+    font-weight: bolder;
+  position: absolute;
+  left: 140px;
+  bottom: 200px;
+    margin-left: 20px;
+  }
+
+  .magsafedetail {
+    /* background-color: #0066CC; */
+    position: absolute;
+  left: 160px;
+  bottom: 100px;
+  font-size: 20px;
+  }
+
+  .magsafedetail a {
+    margin-top: 30px;
+    list-style: none;
+    text-decoration: none;
+    color: #0066CC;
   }
 
   .browsebuttons{
@@ -125,19 +192,8 @@ cursor: pointer;
     border-radius: 50%;
     padding: 40px;
   }
-  .background{
-    display: flex;
-    align-items: center;
-    background-color:#F2F2F2 ;
-  }
-  .info{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-margin-left: 25%;   
-color: #1D1D1F; 
-margin-top: 30px;
-  }
+  
+ 
 .shop1{
   margin: 20px;
   list-style: none;
@@ -185,6 +241,7 @@ margin-top: 30px;
   width: 80%;
   margin-left: 10%;
   position: relative;
+  overflow-x: visible;
   
   }
   
@@ -528,11 +585,45 @@ margin-top: 30px;
       width: 100;
       flex-direction: column;
     }
-    .navbar.active{
+    .navbar-links.active{
       display: flex;
     }
     .title{
       margin-top: 10px;
 font-size: 12px;
     }
+     .mediaq{
+      display: flex;
+      justify-content: space-between;
+      background-color: #1D1D1F;
+      width: 100%;
+      
+    }
+    .container1{
+      background-size: 500%;
+    }
+
+.containerfooterpics{
+  display: flex;
+  flex-wrap: wrap;
+}
+.container5 li {
+  display: none;
+}
+.container5{
+  display: flex;
+  flex-direction: column;
+}
+.footerpara1{
+  display: none;
+}
+.copyright1{
+  margin: 0;
+  display:none;
+}
+.mac img{
+  display: flex;
+  flex: wrap;
+}
+
   }
